# PortalFilm

./: FilmPortal.db  main.py
Portalfilm.egg-info/: SOURCES.txt
tests/: DatabaseHandler.py  FilmPortal.sql  README.md  pyproject.toml
tests/Portalfilm.egg-info/: PKG-INFO  top_level.txt
